syntax = "proto3";

package api.v1.cluster;

import "config/v1alpha1/generated.proto";
import "model/metrics.proto";

// Cluster model.
message Cluster {
  // ID of the cluster.
  string cluster_id = 1;
  config.v1alpha1.OperatorConfig operator_config = 2;
  string operator_version = 3;
  string k8s_version = 4;

  model.Resources allocateable = 5;
  model.Resources usage = 6;
  model.Resources utilization = 7;
}
